--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/fs-extra": "^11.0.1",
     "@types/mongoose": "^5.11.97",
