--- a/fronted/package.json
+++ b/fronted/package.json
@@ -11,19 +11,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
+    "@angular/cdk": "^16.2.10",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
+    "@angular/material": "^16.2.10",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@ng-bootstrap/ng-bootstrap": "^15.1.0",
     "@ngneat/error-tailor": "^1.3.1",
+    "@popperjs/core": "^2.11.6",
     "@types/googlemaps": "^3.43.3",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -32,8 +37,10 @@
     "@angular-devkit/build-angular": "^16.1.7",
     "@angular/cli": "~16.1.7",
     "@angular/compiler-cli": "^16.1.0",
+    "@angular/localize": "^16.1.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/jasmine": "~4.3.0",
+    "@types/jsonwebtoken": "^9.0.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
