--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "clean": "rimraf dist",
     "start": "npm run build && node dist/index.js",
-    "dev1": "nodemon src_2/index.ts"
+    "dev1": "nodemon src_2/index.js"
   },
   "keywords": [],
   "author": "",
