--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.7.0",
     "rimraf": "^5.0.1",
     "uuid": "^9.0.0"
   },
