--- a/fronted/package.json
+++ b/fronted/package.json
@@ -11,14 +11,15 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.12",
-    "@angular/cdk": "^16.2.11",
-    "@angular/compiler": "^16.1.0",
-    "@angular/core": "^16.1.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/material": "^16.2.11",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.1.0",
-    "@angular/router": "^16.1.0",
+    "@angular/cdk": "^16.2.12",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/forms": "^16.2.12",
+    "@angular/material": "^16.2.12",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/router": "^16.2.12",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@ng-bootstrap/ng-bootstrap": "^15.1.0",
     "@ngneat/error-tailor": "^1.3.1",
@@ -29,18 +30,22 @@
     "bootstrap-icons": "^1.11.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
+    "ngx-socket-io": "^4.7.0",
     "rxjs": "^7.8.1",
-    "tslib": "^2.3.0",
+    "socket.io-client": "^4.8.1",
+    "tslib": "^2.8.1",
+    "ws": "^8.17.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.7",
-    "@angular/cli": "~16.1.7",
-    "@angular/compiler-cli": "^16.1.0",
-    "@angular/localize": "^16.1.0",
+    "@angular-devkit/build-angular": "^16.2.12",
+    "@angular/cli": "~16.2.12",
+    "@angular/compiler-cli": "^16.2.12",
+    "@angular/localize": "^16.2.12",
     "@types/bcryptjs": "^2.4.2",
     "@types/jasmine": "~4.3.0",
     "@types/jsonwebtoken": "^9.0.3",
+    "@types/socket.io-client": "^1.4.36",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
