--- a/fronted/package.json
+++ b/fronted/package.json
@@ -25,6 +25,7 @@
     "@ngneat/error-tailor": "^1.3.1",
     "@popperjs/core": "^2.11.6",
     "@types/googlemaps": "^3.43.3",
+    "@types/socket.io": "^3.0.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.11.3",
@@ -32,6 +33,7 @@
     "jwt-decode": "^3.1.2",
     "ngx-socket-io": "^4.7.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tslib": "^2.8.1",
     "ws": "^8.17.0",
